# rustc-test

./: .travis.yml  Cargo.toml
.github/workflows/: CI.yml
src/: lib.rs
