[package]
name = "tester"
version = "0.4.0"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
description = "A fork of Rust’s `test` crate that doesn’t require unstable language features."
repository = "https://github.com/messense/rustc-test"

[lib]
name = "test"
crate-type = ["dylib", "rlib"]

[features]
asm_black_box = []
capture = []

[dependencies]
libc = "0.2"
getopts = "0.2"
term = "0.4"
