[package]
name = "tester"
version = "0.5.1"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
description = "A fork of Rust’s `test` crate that doesn’t require unstable language features."
repository = "https://github.com/messense/rustc-test"
edition = "2018"

[lib]
name = "test"
crate-type = ["dylib", "rlib"]

[features]
asm_black_box = []
capture = []

[dependencies]
libc = { version = "0.2", default-features = false }
getopts = "0.2"
term = "0.6"
